unpackaged/main/default/objects/ProgramApi__Program_Term__c/ProgramApi__Program_Term__c.object-meta.xml
<CustomObject>
    <description>This object establishes the length of time given to complete tasks.</description>
    <label>Program Term</label>
    <nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>Program Term Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Program Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>