unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Terms</relationshipLabel>
    <relationshipName>Program_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>