unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/FON_Adjusted_Credit_Values__c.field-meta.xml
<CustomField>
    <fullName>FON_Adjusted_Credit_Values__c</fullName>
    <label>Audit Adjusted Credit Values</label>
    <summarizedField>NCP_Credits__c.FON_Calculated_Adjusted_Credit_Value__c</summarizedField>
    <summaryForeignKey>NCP_Credits__c.Program_Term__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>