unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/FON_Allowed_Credits__c.field-meta.xml
<CustomField>
    <fullName>FON_Allowed_Credits__c</fullName>
    <defaultValue>30</defaultValue>
    <label>Allowed Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>