unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/FON_Allowed_Workshops__c.field-meta.xml
<CustomField>
    <fullName>FON_Allowed_Workshops__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Allowed Workshops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>