unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/FON_Credits_Acquired__c.field-meta.xml
<CustomField>
    <fullName>FON_Credits_Acquired__c</fullName>
    <inlineHelpText>Approved Credits</inlineHelpText>
    <label>Approved Credits</label>
    <summarizedField>NCP_Credits__c.FON_Total_Credits__c</summarizedField>
    <summaryFilterItems>
        <field>NCP_Credits__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved, Audited - Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NCP_Credits__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Audited - Rejected</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NCP_Credits__c.Session_Type__c</field>
        <operation>notEqual</operation>
        <value>NCP CE Workshop</value>
    </summaryFilterItems>
    <summaryForeignKey>NCP_Credits__c.Program_Term__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>