unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/FON_Total_Credits_after_Auditing__c.field-meta.xml
<CustomField>
    <fullName>FON_Total_Credits_after_Auditing__c</fullName>
    <label>Approved Credits after Auditing</label>
    <summarizedField>NCP_Credits__c.FON_Audit_Adjusted_Value__c</summarizedField>
    <summaryFilterItems>
        <field>NCP_Credits__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved, Audited - Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NCP_Credits__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Audited - Rejected</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NCP_Credits__c.Session_Type__c</field>
        <operation>notEqual</operation>
        <value>NCP CE Workshop</value>
    </summaryFilterItems>
    <summaryForeignKey>NCP_Credits__c.Program_Term__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>