unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/FON_Workshops_Attended2__c.field-meta.xml
<CustomField>
    <fullName>FON_Workshops_Attended2__c</fullName>
    <label>Workshops Attended</label>
    <summaryFilterItems>
        <field>NCP_Credits__c.Session_Type__c</field>
        <operation>equals</operation>
        <value>NCP CE Workshop</value>
    </summaryFilterItems>
    <summaryForeignKey>NCP_Credits__c.Program_Term__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>