unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/FON_Workshops_Attended__c.field-meta.xml
<CustomField>
    <fullName>FON_Workshops_Attended__c</fullName>
    <label>Workshops Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>