unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/Is_Expired_Profile_Active_Term__c.field-meta.xml
<CustomField>
    <fullName>Is_Expired_Profile_Active_Term__c</fullName>
    <formula>IF (AND(ProgramApi__End_Date__c &lt; TODAY(), ProgramApi__Profile__r.Current_Program_Term__c = null, ProgramApi__Profile__r.FON_Program_End_Date__c == ProgramApi__End_Date__c), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Expired Profile Active Term</label>
    <type>Checkbox</type>
</CustomField>