unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/Legacy_Program_Term_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Program_Term_ID__c</fullName>
    <label>Legacy Program Term ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>