unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/ProgramApi__Active__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies active term; Term end date is in the future</description>
    <inlineHelpText>Identifies active term; Term end date is in the future</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>