unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/ProgramApi__End_Date__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__End_Date__c</fullName>
    <description>Identifies the term end date; Date all goals must be completed to successfully complete program</description>
    <inlineHelpText>Identifies the term end date; Date all goals must be completed to successfully complete program</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>