unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/ProgramApi__Is_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Is_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines a term to be a maintenance term.</description>
    <inlineHelpText>Defines a term to be a maintenance term.</inlineHelpText>
    <label>Is Maintenance</label>
    <type>Checkbox</type>
</CustomField>