unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/ProgramApi__Profile__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SYSTEM. Relates the program profile to the term</description>
    <inlineHelpText>SYSTEM. Relates the program profile to the term</inlineHelpText>
    <label>Program Profile</label>
    <referenceTo>ProgramApi__Program_Profile__c</referenceTo>
    <relationshipLabel>Program Terms</relationshipLabel>
    <relationshipName>Program_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>