unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/ProgramApi__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Start_Date__c</fullName>
    <description>Identifies the term start date</description>
    <inlineHelpText>Identifies the term start date</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>