unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/Remaining_Credits__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Credits__c</fullName>
    <formula>50- Total_Credits__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>