unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/Remaining_Workshops__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Workshops__c</fullName>
    <formula>3-  FON_Workshops_Attended2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Workshops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>