unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/Total_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Credits__c</fullName>
    <inlineHelpText>All Entered Credits Regardless of Status</inlineHelpText>
    <label>Total Credits Entered</label>
    <summarizedField>NCP_Credits__c.FON_Total_Credits__c</summarizedField>
    <summaryFilterItems>
        <field>NCP_Credits__c.Session_Type__c</field>
        <operation>notEqual</operation>
        <value>NCP CE Workshop</value>
    </summaryFilterItems>
    <summaryForeignKey>NCP_Credits__c.Program_Term__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>