unpackaged/main/default/objects/ProgramApi__Program_Term__c/fields/Workshops_Approved__c.field-meta.xml
<CustomField>
    <fullName>Workshops_Approved__c</fullName>
    <label>Workshops Approved</label>
    <summaryFilterItems>
        <field>NCP_Credits__c.Session_Type__c</field>
        <operation>equals</operation>
        <value>NCP CE Workshop</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>NCP_Credits__c.Status__c</field>
        <operation>equals</operation>
        <value>Approved, Audited</value>
    </summaryFilterItems>
    <summaryForeignKey>NCP_Credits__c.Program_Term__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>