unpackaged/main/default/objects/ProgramApi__Program_Term__c/listViews/X2023_Terms.listView-meta.xml
<ListView>
    <fullName>X2023_Terms</fullName>
    <columns>NAME</columns>
    <columns>ProgramApi__Profile__c</columns>
    <columns>Contact__c</columns>
    <columns>ProgramApi__Start_Date__c</columns>
    <columns>ProgramApi__End_Date__c</columns>
    <columns>ProgramApi__Active__c</columns>
    <columns>ProgramApi__Is_Maintenance__c</columns>
    <columns>FON_Credits_Acquired__c</columns>
    <columns>Total_Credits__c</columns>
    <columns>FON_Total_Credits_after_Auditing__c</columns>
    <columns>FON_Workshops_Attended__c</columns>
    <columns>FON_Workshops_Attended2__c</columns>
    <columns>Workshops_Approved__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ProgramApi__End_Date__c</field>
        <operation>equals</operation>
        <value>12/31/2023</value>
    </filters>
    <filters>
        <field>ProgramApi__Start_Date__c</field>
        <operation>equals</operation>
        <value>1/1/2023</value>
    </filters>
    <label>2023 Terms</label>
</ListView>